# ex-fuzzy-reg

./: .gitignore  README.md  model.json  pyproject.toml  requirements.txt
demos/: genetic.ipynb  inference.ipynb  mamdani.ipynb  mamdaniFIS_advertising_demo.py  mamdaniFIS_salary_data_demo.py  rb_coding.py  rule_base_demo.py
demos/datasets/: salary_data.csv
ex_fuzzy_reg/: __init__.py  evolutionary_backends_reg.py  evolutionary_fit_reg.py  fuzzy_sets.py  fuzzy_variable.py  regressors.py  rules.py  rules_reg.py  rules_reg_utils.py
tests/: rb_coding.py  test_fuzzy_sets.py  test_fuzzy_variables.py  test_rules.py  test_rules_reg.py  test_rules_reg_utils.py  test_rules_utils.py
