[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ex-fuzzy-reg"
version = "0.1.0"
description = "Fuzzy inference system for regression, based on ex-fuzzy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "ex-fuzzy>=0.4",
    "pymoo>=0.6",
]

[project.optional-dependencies]
validate = [
    "scipy>=1.11",
]
gpu = [
    "torch>=2.0",
    "evox>=0.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.11",
]

[project.urls]
Repository = "https://github.com/Pablox8/ex-fuzzy-reg"

[tool.setuptools.packages.find]
where = ["."]
include = ["ex_fuzzy_reg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
